<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcule_seu_imc"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/imc" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/editTextAltura"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/edit_text_hint_altura"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#000000"
                android:textStyle="bold"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <EditText
                android:id="@+id/editTextPeso"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/edit_text_hint_peso"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#000000"
                android:textStyle="bold"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="43dp" />

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#3F51B5"
                android:hint="@string/edit_text_hint_finalizar"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#3F51B5"
                android:hint="@string/edit_text_hint_calcular"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#3F51B5"
                    android:hint="@string/edit_text_hint_salvar"
                    android:textColorHint="#FFFFFF"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="14dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#3F51B5"
                    android:hint="@string/edit_text_hint_limpar"
                    android:textColorHint="#FFFFFF"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>